Added custom cursor w/ hover behaviourUnpolished.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div id="cursor"></div>
     <div id="mainPanel", class="snap">
         <div id="bgText"><span class = "pink">Utkarsh</span> <span class = "aqua">Pant</span></div>
         <div id="changingText" class="lime">I am a developer_</div>
@@ -18,15 +19,15 @@
             <p>Living Professionally since 2005</p>
             <p>Passed 10th grade without giving exams asdaskdals</p>
             <div id="socials">
-                <a href="google.com"><img src="images/github.png" alt=""></a>
-                <a href="google.com"><img src="images/leetcode.png" alt=""></a>
-                <a href="google.com"><img src="images/linkedin.png" alt=""></a>
+                <a href="google.com" class="hoverEffect"><img src="images/github.png" alt=""></a>
+                <a href="google.com" class="hoverEffect"><img src="images/leetcode.png" alt=""></a>
+                <a href="google.com" class="hoverEffect"><img src="images/linkedin.png" alt=""></a>
             </div>
         </div>
         <div id="projects", class="snap">
             <p>Projects</p>
             <div id="projectPanels">
-                <div style="--bg_image: url('images/sampleImage1.jpg');">  
+                <div style="--bg_image: url('images/sampleImage1.jpg');" class="hoverEffect">  
                     <a href="https://google.com" target="_blank" style="text-decoration: none;">
                         <div>
                             <h1>Sample Heading</h1>
@@ -34,7 +35,7 @@
                         </div>
                     </a>
                 </div>
-                <div style="--bg_image: url('images/sampleImage1.jpg');">  
+                <div style="--bg_image: url('images/sampleImage1.jpg');" class="hoverEffect">  
                     <a href="https://google.com" target="_blank" style="text-decoration: none;">
                         <div>
                             <h1>Sample Heading</h1>
@@ -42,7 +43,7 @@
                         </div>
                     </a>
                 </div>
-                <div style="--bg_image: url('images/sampleImage1.jpg');">  
+                <div style="--bg_image: url('images/sampleImage1.jpg');" class="hoverEffect">  
                     <a href="https://google.com" target="_blank" style="text-decoration: none;">
                         <div>
                             <h1>Sample Heading</h1>
@@ -50,7 +51,7 @@
                         </div>
                     </a>
                 </div>
-                <div style="--bg_image: url('images/sampleImage1.jpg');">  
+                <div style="--bg_image: url('images/sampleImage1.jpg');" class="hoverEffect">  
                     <a href="https://google.com" target="_blank" style="text-decoration: none;">
                         <div>
                             <h1>Sample Heading</h1>
