Updated the text
Made the text in the about me, a bit more... presentable

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         <div id="aboutMe", class="snap">
             <img src="images/meImage.jpg" alt="me" class="mainImage">
             <p>About Me</p>
-            <p>Living Professionally since 2005</p>
-            <p>Passed 10th grade without giving exams asdaskdals</p>
+            <p>Born in 2005.</p>
+            <p>Cleared 10th and 12th, currently pursuing B.TECH CSE @ Graphic Era (Deemed To Be University), Dehradun.</p>
             <div id="socials">
                 <a href="google.com" class="hoverEffect"><img src="images/github.png" alt=""></a>
                 <a href="google.com" class="hoverEffect"><img src="images/leetcode.png" alt=""></a>
