--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
             <p>Born in 2005.</p>
             <p>Cleared 10th and 12th, currently pursuing B.TECH CSE @ Graphic Era (Deemed To Be University), Dehradun.</p>
             <div id="socials">
-                <a href="google.com" class="hoverEffect"><img src="images/github.png" alt=""></a>
-                <a href="google.com" class="hoverEffect"><img src="images/leetcode.png" alt=""></a>
-                <a href="google.com" class="hoverEffect"><img src="images/linkedin.png" alt=""></a>
+                <a href="https://github.com/Utkarsh-Pant" class="hoverEffect"><img src="images/github.png" alt=""></a>
+                <a href="https://leetcode.com/u/Utkarsh-Pant/" class="hoverEffect"><img src="images/leetcode.png" alt=""></a>
+                <a href="https://www.linkedin.com/in/utkarsh-pant/" class="hoverEffect"><img src="images/linkedin.png" alt=""></a>
             </div>
         </div>
         <div id="projects", class="snap">
