Added EasySQL to projects

--- a/index.html
+++ b/index.html
@@ -28,10 +28,15 @@
             <p>Projects</p>
             <div id="projectPanels">
                 <div style="--bg_image: url('images/sampleImage1.jpg');" class="hoverEffect">  
-                    <a href="https://google.com" target="_blank" style="text-decoration: none;">
+                    <a href="https://github.com/Utkarsh-Pant/EasySQL" target="_blank" style="text-decoration: none;">
                         <div>
-                            <h1>Sample Heading</h1>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia excepturi aspernatur consequatur nesciunt voluptatibus in laudantium, optio aperiam ad, mollitia, maxime esse autem repellat illum ullam? Corrupti accusamus aut omnis! 
+                            <h1>EasySQL</h1>
+                            An easy way to run SQL queries!
+                            Made using Python (MySQL + Tkinter)
+                            Features:
+                            - Easy single download executable application, compatible in multiple systems
+                            - Easy to use GUI
+                            - Copies the queries to clipboards automatically
                         </div>
                     </a>
                 </div>
