Formatted EasySQL text

--- a/index.html
+++ b/index.html
@@ -31,12 +31,11 @@
                     <a href="https://github.com/Utkarsh-Pant/EasySQL" target="_blank" style="text-decoration: none;">
                         <div>
                             <h1>EasySQL</h1>
-                            An easy way to run SQL queries!
-                            Made using Python (MySQL + Tkinter)
-                            Features:
-                            - Easy single download executable application, compatible in multiple systems
-                            - Easy to use GUI
-                            - Copies the queries to clipboards automatically
+                            An easy way to run SQL queries! Made using Python (MySQL + Tkinter)<br>
+                            Features:<br>
+                            - Easy single download executable application, compatible in multiple systems<br>
+                            - Easy to use GUI<br>
+                            - Copies the queries to clipboards automatically<br>
                         </div>
                     </a>
                 </div>
